# biometric-siamese-network

./: .gitignore  README.md  app.py  pyproject.toml
notebooks/: 01_socofing_exploratory_data_analysis.ipynb  02_dataset_preprocessing.ipynb  03_model.ipynb
src/: dataset.py  model.py  train.py  training.py
