[project]
name = "biometric-siamese-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "torcheval>=0.0.7",
    "torchinfo>=1.8.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]
